add ArmyVectorStore and refactor meta